# auth-api-rust

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOY_TO_RAILWAY.md  EMERGENCY_CORS_FIX.md  LICENSE  README.md  railway.toml  simple_build_test.rs  test_api.sh  test_current_deployment.sh
.sqlx/: query-16f0a3ae37169f97fcce1679456c3a946206275720ed2e894d4f9a7f38f09d7e.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/api/core/: OpenAPI.ts
frontend/src/api/models/: RegisterRequest.ts  Role.ts
frontend/src/api/services/: AuthService.ts  ProtectedService.ts
frontend/src/pages/: Login.tsx  Profile.tsx  Register.tsx  UserProfile.tsx
src/: cors_middleware.rs  main.rs  main_backup.rs  utils.rs
src/middleware/: auth.rs
src/models/: user.rs
src/routes/: auth.rs  protected.rs
